Works with one transaction. Added a two-way multinode messaging system.

--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,7 @@
 			<modules>
 				<module>commons</module>
 				<module>two_phase_commit</module>
+				<module>two_phase_commit_multinode</module>
 			</modules>
 		</profile>
 
